--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -4,6 +4,14 @@ server:
 spring:
   application:
     name: user-service
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/students_ll5?characterEncoding=utf8&createDatabaseIfNotExist=true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
 
 eureka:
   instance:
