--- a/ticket-service/src/main/resources/application.yaml
+++ b/ticket-service/src/main/resources/application.yaml
@@ -1,17 +1,21 @@
 server:
   port: ${PORT:8081}
 
+
+
 spring:
   application:
     name: ticket-service
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/students_ll5?characterEncoding=utf8&createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/students_ll5?characterEncoding=utf8&createDatabaseIfNotExist=true&serverTimezone=UTC
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: false
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
+
 
 eureka:
   instance:
