--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ spring:
   application:
     name: user-service
   datasource:
-    username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/students_ll5?characterEncoding=utf8&createDatabaseIfNotExist=true
+    username: dev
+    password: poridg1803!!!
+    url: jdbc:mysql://localhost:3306/students_ll5?characterEncoding=utf8&createDatabaseIfNotExist=true&serverTimezone=UTC
   jpa:
     hibernate:
       ddl-auto: update
@@ -16,6 +16,7 @@ spring:
 eureka:
   instance:
     instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname: localhost
   client:
     registryFetchIntervalSeconds: 5
     instanceInfoReplicationIntervalSeconds: 5
