--- a/ticket-service/src/main/resources/application.yaml
+++ b/ticket-service/src/main/resources/application.yaml
@@ -7,11 +7,12 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/students_ll5?characterEncoding=utf8&createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/students_ll5?characterEncoding=utf8&createDatabaseIfNotExist=true&serverTimezone=UTC
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: false
+    show-sql: true
+
 
 eureka:
   instance:
